--- a/lab02/.vscode/settings.json
+++ b/lab02/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "../../../lib/component-catalog-2020-08-04.jar"
+        "lib/**/*.jar"
     ]
 }
